<resources>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>

    <string name="app_name">Delivery routes</string>
    <string name="enter">Login with Google</string>
    <string name="login_failed">"Login failed"</string>
    <string name="list_routes">Routes list</string>
    <string name="add_route">Add new route</string>
    <string name="logout">Exit application</string>
    <string name="write_name_route">Type route name</string>
    <string name="cancel">Cancel</string>
    <string name="new_route_added">route added</string>
    <string name="dont_have_routes">no routes created yet</string>
    <string name="loading">Loading…</string>
    <string name="zero_routes">You do not have any routes created yet</string>
    <string name="settings">Settings</string>
    <string name="open_google_map">Route in Google Maps</string>
    <string name="change_name">Edit route name</string>
    <string name="add_point">Add new point</string>
    <string name="route_name_changed">Route name has been changed</string>
    <string name="point_created">New point created</string>
    <string name="add_new_point">Add new point on the map</string>
    <string name="name">* Name</string>
    <string name="latitude">* Latitude</string>
    <string name="longitude">* Longitude</string>
    <string name="not_points">You do not have any delivery points created yet. Create one. Note that the first point created will be the starting point of the route.</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="your_comment">Your comment</string>
    <string name="site">https://suzdalenko.com</string>

    <string name="followMe">Follow me</string>
    <string name="doNotFollowMe">Do not follow me</string>
    <string name="need_at_least_two_points">To display the route you need at least two points on the map</string>
    <string name="add_point_begin">Create at least one point first, to be able to see it on the map</string>
    <string name="try_again">Try again</string>
    <string name="optimizacion_route">Route optimization</string>
    <string name="route_optimizacion_legend">\n With route optimization enabled, the shortest and most convenient route from the starting point to the end of the route will be shown on the map \n\n If the route optimization is disabled, the route will be shown as it is in the route view, in the same order. </string>
    <string name="optimizacion_active">Optimization enabled</string>
    <string name="optimizacion_desabled">Optimization disabled</string>
    <string name="edit_point">Edit</string>
    <string name="delete_point">Delete</string>
    <string name="choose_option">Choose option</string>
    <string name="none">" "</string>
    <string name="point_updated">Updated</string>
    <string name="delete_point_yes">Are you sure you want to eliminate ?</string>
    <string name="deleted">Deleted</string>

    <string name="required_description">Required fields</string>
    <string name="zip_code">Zip code</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="get_coordinates">Get coordinates</string>
    <string name="show_in_map">See on the map</string>
    <string name="save">Save</string>
    <string name="detail">Detail</string>
    <string name="gotopoint">"Go to "</string>
    <string name="point_edited">The point is edited</string>


</resources>