<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPointToRouteActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:text="@string/required_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/nameEditText"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/descriptionEditText"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/zipcode"
            android:hint="@string/zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/city"
            android:hint="@string/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/address"
            android:hint="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_gravity="end"
            android:id="@+id/get_coordinates"
            android:text="@string/get_coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/latitudeEditText"
            android:hint="@string/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/longitudeEditText"
            android:hint="@string/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/save_new_point"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="33dp"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>