<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".service.currentroute.activities.AddPointToRouteActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_marginTop="33dp"
            android:textSize="21sp"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:id="@+id/nameDetail"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="11dp"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:textSize="21sp"
            android:id="@+id/descriptionDetail"
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="11dp"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:textSize="21sp"
            android:id="@+id/zipcodeDetail"
            android:text="@string/zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="11dp"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:textSize="21sp"
            android:id="@+id/cityDetail"
            android:text="@string/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="11dp"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:textSize="21sp"
            android:id="@+id/addressDetail"
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="11dp"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:textSize="21sp"
            android:id="@+id/latitudeDetail"
            android:text="@string/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="11dp"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:textSize="21sp"
            android:id="@+id/longitudeDetail"
            android:text="@string/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>