<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="24dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:padding="7dp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/app_name"
            android:id="@+id/name_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            />
        <TextView
            android:padding="7dp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/description"
            android:id="@+id/description_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/blue"
                android:maxLines="1"
                android:id="@+id/latitude_point"
                android:textSize="13dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/latitude"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/blue"
                android:maxLines="1"
                android:id="@+id/longitude_point"
                android:textSize="13dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/longitude"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>